# 6502Emulator

./: README.md  make_.bat
6502/6502Lib/: CMakeLists.txt
6502/6502Lib/src/private/: main_6502.cpp
6502/6502Lib/src/public/: main_6502.hpp
6502/6502Test/src/: 6502Tests.cpp  main_6502.cpp
